[tool.poetry]
name = "cnn-classify-dicom-medical-images"
version = "0.1.0"
description = ""
authors = ["yp-photobox <yatkpatel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
